--- a/css/main.scss
+++ b/css/main.scss
@@ -164,11 +164,17 @@ body{
             border: 5px solid rgba(98, 72, 199, 0.47);
             margin: 10px;
             a{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 img{
                     width: 2.5rem;
                     height: 2.5rem;
                 }
             }
+            transition: all 0.6s ease;
         }
         .carb{
             background-color: var(--blue);
@@ -182,11 +188,17 @@ body{
             border: 5px solid rgba(98, 72, 199, 0.47);
             margin: 10px;
             a{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 img{
                     width: 2.5rem;
                     height: 2.5rem;
                 }
             }
+            transition: all 0.6s ease;
         }
     }
 
@@ -202,11 +214,17 @@ body{
         border: 5px solid rgba(98, 72, 199, 0.47);
         // margin-left: -150px;
         a{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
            img{
                 width: 5rem;
                 height: 5rem;
             }
         }
+        transition: all 0.6s ease;
     }
 
     .cc{
@@ -228,13 +246,19 @@ body{
                 // margin: auto;
                 border-radius: 30px;
                 border: 5px solid rgba(98, 72, 199, 0.47);
-                margin: 10px;
+                margin: 10px 5px 10px 10px;
                 a{
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
                         width: 2.5rem;
                         height: 2.5rem;
                     }
                 }
+                transition: all 0.6s ease;
             }
             .ccracb{
                 background-color: var(--blue);
@@ -246,19 +270,25 @@ body{
                 // margin: auto;
                 border-radius: 30px;
                 border: 5px solid rgba(98, 72, 199, 0.47);
-                margin: 10px;
+                margin: 10px 10px 10px 5px;
                 a{
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
                         width: 2.5rem;
                         height: 2.5rem;
                     }
                 }
+                transition: all 0.6s ease;
             }
         }
 
         .ccrb{
             background-color: var(--blue);
-            width: 260px;
+            width: 250px;
             height: 120px;
             display: flex;
             align-items: center;
@@ -268,12 +298,22 @@ body{
             border: 5px solid rgba(98, 72, 199, 0.47);
             // margin-left: -150px;
             a{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                img{
                     width: 2.5rem;
                     height: 2.5rem;
                 }
             } 
+            transition: all 0.6s ease;
         }
     }
 }
 
+.grids .cc .ccrb:hover, .grids .cc .ccra .ccraca:hover,.grids .cc .ccra .ccracb:hover, .grids .cb:hover,.grids .ca .cara:hover, .grids .ca .carb:hover{
+    transform: scale(1.04);
+    box-shadow: 0px 28px 32px -20px rgba(0, 0, 0, 0.4);
+}
