--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
   left: -90vw;
   -webkit-transition: all 0.8s ease-in-out;
   transition: all 0.8s ease-in-out;
+  z-index: 2;
 }
 
 .slide h3 {
@@ -166,6 +167,10 @@ body {
           justify-content: center;
   margin: auto;
   margin-top: 50px;
+  position: relative;
+  z-index: 1;
+  -webkit-transition: 1s ease;
+  transition: 1s ease;
 }
 
 .grids .ca {
@@ -437,5 +442,17 @@ body {
           transform: scale(1.04);
   -webkit-box-shadow: 0px 28px 32px -20px rgba(0, 0, 0, 0.4);
           box-shadow: 0px 28px 32px -20px rgba(0, 0, 0, 0.4);
+}
+
+.slide:hover ~ .grids {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  opacity: 0.3;
+}
+
+@media (max-width: 600px) {
+  .slide {
+    width: 50vw;
+  }
 }
 /*# sourceMappingURL=main.css.map */
