--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,7 @@ body{
     position: absolute;
     left: -90vw;
     transition: all 0.8s ease-in-out;
+    z-index: 2;
 }
 
 .slide h3{
@@ -150,6 +151,10 @@ body{
     margin: auto;
     margin-top: 50px;
     // margin-left: 50px;
+    position: relative;
+    z-index: 1;
+
+    transition: 1s ease;
     .ca{
         margin-left: 0;
         .cara{
@@ -316,4 +321,15 @@ body{
 .grids .cc .ccrb:hover, .grids .cc .ccra .ccraca:hover,.grids .cc .ccra .ccracb:hover, .grids .cb:hover,.grids .ca .cara:hover, .grids .ca .carb:hover{
     transform: scale(1.04);
     box-shadow: 0px 28px 32px -20px rgba(0, 0, 0, 0.4);
+}
+
+.slide:hover ~ .grids{
+    transform: scale(0.9);
+    opacity: 0.3;
+}
+
+@media (max-width: 600px){
+    .slide{
+        width: 50vw;
+    }
 }
