--- a/css/main.scss
+++ b/css/main.scss
@@ -378,8 +378,13 @@ body{
                 text-align: center;
             }
 
+            h1{
+                font-size: 1rem;
+            }
+
             h3{
                 font-size: 0.5rem;
+                width: 60vw;
             }
         }
     }
